Enhancing frontend